--- a/app/src/main/res/layout/activity_appointment_info.xml
+++ b/app/src/main/res/layout/activity_appointment_info.xml
@@ -31,15 +31,6 @@
         android:layout_marginTop="16dp"
         android:id="@+id/date_label" />
 
-    <CheckBox
-        android:text="Terminada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="13dp"
-        android:id="@+id/done_button" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,5 +39,28 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/done_button" />
+
+    <CheckBox
+        android:text="Terminada"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/done_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/date_label"
+        android:layout_alignEnd="@+id/date_label"
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp" />
+
+    <Button
+        android:text="Actualizar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="41dp"
+        android:layout_marginEnd="41dp"
+        android:id="@+id/update_button"
+        android:layout_alignBaseline="@+id/done_button"
+        android:layout_alignBottom="@+id/done_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
