--- a/app/src/main/res/layout/activity_medic_tests.xml
+++ b/app/src/main/res/layout/activity_medic_tests.xml
@@ -23,6 +23,7 @@
         android:text="Gestión de Exámenes Médicos"
         android:layout_width="wrap_content"
         android:textSize="25dp"
+        android:layout_centerVertical="true"
         android:textStyle="bold"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -37,7 +38,7 @@
         android:ems="10"
         android:layout_below="@+id/title"
         android:layout_marginTop="18dp"
-        android:id="@+id/name_field"
+        android:id="@+id/name"
         android:layout_alignLeft="@+id/title"
         android:layout_alignStart="@+id/title"
         android:layout_alignParentRight="true"
@@ -49,9 +50,9 @@
         android:inputType="textPersonName"
         android:hint="Costo"
         android:ems="10"
-        android:layout_below="@+id/name_field"
-        android:layout_alignLeft="@+id/name_field"
-        android:layout_alignStart="@+id/name_field"
+        android:layout_below="@+id/name"
+        android:layout_alignLeft="@+id/name"
+        android:layout_alignStart="@+id/name"
         android:layout_marginTop="21dp"
         android:id="@+id/price_field"
         android:layout_alignRight="@+id/title"
