--- a/app/src/main/res/layout/activity_medication_management.xml
+++ b/app/src/main/res/layout/activity_medication_management.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_cases_management"
+    android:id="@+id/activity_medication_management"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.meditec.drapp.general.CasesManagementActivity">
+    tools:context="org.meditec.drapp.general.MedicationManagementActivity">
 
     <TextView
-        android:text="Gestión de casos clínicos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:text="Gestión de Medicamentos"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:id="@+id/title"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:id="@+id/title" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Name"
+        android:hint="Nombre"
         android:ems="10"
         android:layout_below="@+id/title"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="21dp"
         android:id="@+id/name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -38,46 +39,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Medicación"
+        android:hint="Costo"
         android:ems="10"
+        android:layout_marginTop="14dp"
+        android:id="@+id/cost"
         android:layout_below="@+id/name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="18dp"
-        android:id="@+id/medication_field"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Exámenes"
-        android:ems="10"
-        android:layout_below="@+id/medication_field"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="17dp"
-        android:id="@+id/tests_field"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="Crear nuevo"
+        android:text="Crear Medicamento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:id="@+id/button"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/cost"
         android:layout_alignRight="@+id/title"
-        android:layout_alignEnd="@+id/title"
-        android:id="@+id/create_button" />
+        android:layout_alignEnd="@+id/title" />
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="13dp"
-        android:layout_below="@+id/create_button"
-        android:id="@+id/cases_list"
+        android:layout_below="@+id/button"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/medication_list"
+        android:layout_marginTop="18dp" />
 
 </RelativeLayout>
