--- a/app/src/main/res/layout/activity_cases_management.xml
+++ b/app/src/main/res/layout/activity_cases_management.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Name"
+        android:hint="Nombre"
         android:ems="10"
         android:layout_below="@+id/title"
         android:layout_marginTop="27dp"
